try to fix close button add flex-wrap: nowrap to menu ul

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ header .social-network img {
 #menu ul {
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
     justify-items: center;
     align-items: center;
     padding: 5px 0;
